--- a/index_template.html
+++ b/index_template.html
@@ -185,6 +185,24 @@
                         <ul id="collapsibleList" class="collapsible-content">
 
                             <li>
+                                <p><span class="mydate"><strong>[2025.06]&nbsp;</strong></span>
+                                    I was invited to give a talk at <a href="https://llmsc.github.io/">the 1st International Workshop on Large Language Model Supply Chain Analysis (LLMSC 2025)</a>!
+                                <p></p>
+                            </li>
+                            
+                            <li>
+                                <p><span class="mydate"><strong>[2025.06]&nbsp;</strong></span>
+                                    I was invited to serve on the program committee of the <a href="https://conf.researchr.org/track/apsec-2025/apsec-2025-software-engineering-in-practices">SEIP Track on the APSEC 2025</a>. Welcome to submit your papers!</p>
+                                <p></p>
+                            </li>
+
+                            <li>
+                                <p><span class="mydate"><strong>[2025.06]&nbsp;</strong></span>Our paper titled "MalGuard: Towards Real-Time, Accurate, and Actionable Detection of Malicious Packages in PyPI Ecosystem" is accepted by <a href="https://www.usenix.org/conference/usenixsecurity25">USENIX Security 2025</a>.
+                                </p>
+                                <p></p>
+                            </li>
+
+                            <li>
                                 <p><span class="mydate"><strong>[2025.02]&nbsp;</strong></span>
                                     I was invited to serve on the program committee of the Research Track at <a href="https://conf.researchr.org/home/ase-2025">ASE 2025</a>. Welcome to submit your papers!</p>
                                 <p></p>
@@ -422,6 +440,7 @@
                         </ul>
                         <h3>Conference PC Members:</h3>
                         <ul>
+                            <li>SEIP Track, APSEC 2025</li>
                             <li>Research Track, ASE 2025</li>
                             <li>The 1st International Workshop on Large Language Model Supply Chain Analysis (LLMSC 2025)</li>
                             <li>面向复杂系统的软件分析与测试专刊《Automated Software Engineering Journal》, CCF ChinaSoft 2024</li>
