--- a/index.html
+++ b/index.html
@@ -302,6 +302,57 @@
          <p>
           <span class="mydate">
            <strong>
+            [2025.06]
+           </strong>
+           <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
+          </span>
+          I was invited to give a talk at
+          <a href="https://llmsc.github.io/">
+           the 1st International Workshop on Large Language Model Supply Chain Analysis (LLMSC 2025)
+          </a>
+          !
+          <p>
+          </p>
+         </p>
+        </li>
+        <li>
+         <p>
+          <span class="mydate">
+           <strong>
+            [2025.06]
+           </strong>
+           <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
+          </span>
+          I was invited to serve on the program committee of the
+          <a href="https://conf.researchr.org/track/apsec-2025/apsec-2025-software-engineering-in-practices">
+           SEIP Track on the APSEC 2025
+          </a>
+          . Welcome to submit your papers!
+         </p>
+         <p>
+         </p>
+        </li>
+        <li>
+         <p>
+          <span class="mydate">
+           <strong>
+            [2025.06]
+           </strong>
+           <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
+          </span>
+          Our paper titled "MalGuard: Towards Real-Time, Accurate, and Actionable Detection of Malicious Packages in PyPI Ecosystem" is accepted by
+          <a href="https://www.usenix.org/conference/usenixsecurity25">
+           USENIX Security 2025
+          </a>
+          .
+         </p>
+         <p>
+         </p>
+        </li>
+        <li>
+         <p>
+          <span class="mydate">
+           <strong>
             [2025.02]
            </strong>
            <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
@@ -389,7 +440,6 @@
            <strong>
             [2024.08]
            </strong>
-           <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
           </span>
           Our paper titled "VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching" is accepted by
           <a href="https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html">
@@ -406,7 +456,6 @@
            <strong>
             [2024.08]
            </strong>
-           <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
           </span>
           Our paper titled "Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities" is accepted by
           <a href="https://conf.researchr.org/home/ase-2024">
@@ -424,7 +473,6 @@
            <strong>
             [2024.08]
            </strong>
-           <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
           </span>
           Our paper titled "1+1&gt;2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by
           <a href="https://conf.researchr.org/home/ase-2024">
@@ -784,7 +832,8 @@
       <div class="content">
        <!-- <hr> -->
        <ol>
-        <li><p><b><font size="3" color="#0b5394">[ICSE'25]</font></b> <strong>LLMs Meet Library Evolution: Evaluating Deprecated API Usage in LLM-based Code Completion. </strong><br> Chong Wang, <u>Kaifeng Huang</u>, Jian Zhang, Yibo Feng, Lyuye Zhang, Yang Liu, Peng Xin.<em>&nbsp;In Proceedings of the 47th IEEE/ACM International Conference on Software Engineering, Ottawa, Ontario, Canada, accepted, 2025.</em></p></li>
+        <li><p><b><font size="3" color="#0b5394">[USENIX Security'25]</font></b> <strong>MalGuard: Towards Real-Time, Accurate, and Actionable Detection of Malicious Packages in PyPI Ecosystem. </strong><br> Xingan Gao, Xiaobing Sun, Sicong Cao, <u>Kaifeng Huang</u>, Di Wu, Xiaolei Liu, Xingwei Lin, Yang Xiang.<em>&nbsp;None, SEATTLE, WA,  United States, accepted, 2025.</em></p></li>
+<li><p><b><font size="3" color="#0b5394">[ICSE'25]</font></b> <strong>LLMs Meet Library Evolution: Evaluating Deprecated API Usage in LLM-based Code Completion. </strong><br> Chong Wang, <u>Kaifeng Huang</u>, Jian Zhang, Yibo Feng, Lyuye Zhang, Yang Liu, Peng Xin.<em>&nbsp;In Proceedings of the 47th IEEE/ACM International Conference on Software Engineering, Ottawa, Ontario, Canada, accepted, 2025.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[TOSEM'24]</font></b> <strong>Killing Two Birds with One Stone: Malicious Package Detection in NPM and PyPI using a Single Model of Malicious Behavior Sequence. <a href="https://dl.acm.org/doi/10.1145/3705304">[PDF]</a></strong><br> Junan Zhang, <u>Kaifeng Huang</u>, Yiheng Huang, Bihuan Chen, Ruisi Wang, Chong Wang, Xin Peng.<em>&nbsp;ACM Transactions on Software Engineering and Methodology,  accepted, 2024.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[CCS'24]</font></b> <strong>VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching. <a href="https://dl.acm.org/doi/10.1145/3658644.3690372">[PDF]</a></strong><br> <u>Kaifeng Huang</u>, Chenhao Lu, Yiheng Cao, Bihuan Chen, Xin Peng.<em>&nbsp;In Proceedings of the 31th ACM Conference on Computer and Communications Security, Salt Lake City,  United States, pp. 3958-3972, 2024.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[ASE'24]</font></b> <strong>Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities. <a href="https://dl.acm.org/doi/10.1145/3691620.3695516">[PDF]</a></strong><br> Susheng Wu, Ruisi Wang, <u>Kaifeng Huang</u>, Yiheng Cao, Wenyan Song, Zhuotong Zhou, Yiheng Huang, Bihuan Chen, Xin Peng.<em>&nbsp;In Proceedings of the 39th IEEE/ACM International Conference on Automated Software Engineering, Sacramento, California, United States, pp. 1447-1459, 2024.</em></p></li>
@@ -995,6 +1044,9 @@
         Conference PC Members:
        </h3>
        <ul>
+        <li>
+         SEIP Track, APSEC 2025
+        </li>
         <li>
          Research Track, ASE 2025
         </li>
