--- a/index.html
+++ b/index.html
@@ -306,6 +306,23 @@
            </strong>
            <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
           </span>
+          I was invited to serve on the Program Committee of the Research Track at
+          <a href="https://conf.researchr.org/home/fse-2026">
+           FSE 2026
+          </a>
+          .
+          <p>
+          </p>
+         </p>
+        </li>
+        <li>
+         <p>
+          <span class="mydate">
+           <strong>
+            [2025.06]
+           </strong>
+           <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
+          </span>
           I was invited to give a talk at
           <a href="https://llmsc.github.io/">
            the 1st International Workshop on Large Language Model Supply Chain Analysis (LLMSC 2025)
@@ -323,7 +340,7 @@
            </strong>
            <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
           </span>
-          I was invited to serve on the program committee of the
+          I was invited to serve on the Program Committee of the
           <a href="https://conf.researchr.org/track/apsec-2025/apsec-2025-software-engineering-in-practices">
            SEIP Track on the APSEC 2025
           </a>
@@ -357,7 +374,7 @@
            </strong>
            <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
           </span>
-          I was invited to serve on the program committee of the Research Track at
+          I was invited to serve on the Program Committee of the Research Track at
           <a href="https://conf.researchr.org/home/ase-2025">
            ASE 2025
           </a>
@@ -374,7 +391,7 @@
            </strong>
            <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
           </span>
-          I was invited to serve on the program committee at
+          I was invited to serve on the Program Committee at
           <a href="https://llmsc.github.io/">
            the 1st International Workshop on Large Language Model Supply Chain Analysis (LLMSC 2025)
           </a>
@@ -423,7 +440,6 @@
            <strong>
             [2024.10]
            </strong>
-           <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
           </span>
           Our paper titled "Killing Two Birds with One Stone: Malicious Package Detection in NPM and PyPI using a Single Model of Malicious Behavior Sequence" is accepted by
           <a href="https://dl.acm.org/journal/tosem">
@@ -524,7 +540,7 @@
             [2024.03]
            </strong>
           </span>
-          I was invited to serve on the program committee of the Research Track at
+          I was invited to serve on the Program Committee of the Research Track at
           <a href="https://2024.aiwareconf.org/track/aiware-2024-challenge-track ">
            AIWare 2024 Challenge Track
           </a>
@@ -540,7 +556,7 @@
             [2024.03]
            </strong>
           </span>
-          I was invited to serve on the program committee of the Research Track at
+          I was invited to serve on the Program Committee of the Research Track at
           <a href="https://issre.github.io/2024/">
            ISSRE 2024
           </a>
@@ -606,7 +622,7 @@
             [2023.12]
            </strong>
           </span>
-          I was invited to serve on the program committee of the Research Track at
+          I was invited to serve on the Program Committee of the Research Track at
           <a href="https://conf.researchr.org/home/ase-2024">
            ASE 2024
           </a>
@@ -643,7 +659,7 @@
             [2023.06]
            </strong>
           </span>
-          I was invited to serve on the program committee of the Artifact Evaluation Track at
+          I was invited to serve on the Program Committee of the Artifact Evaluation Track at
           <a href="">
            ESEC/FSE 2023
           </a>
@@ -675,7 +691,7 @@
             [2022.09]
            </strong>
           </span>
-          I was invited to serve on the program committee of the Artifact Evaluation Track at
+          I was invited to serve on the Program Committee of the Artifact Evaluation Track at
           <a href="">
            ICSE 2023
           </a>
@@ -691,7 +707,7 @@
             [2022.08]
            </strong>
           </span>
-          I was invited to serve on the program committee of Tool Demo Track at
+          I was invited to serve on the Program Committee of Tool Demo Track at
           <a href="">
            SANER 2023
           </a>
@@ -1044,6 +1060,9 @@
         Conference PC Members:
        </h3>
        <ul>
+        <li>
+         Research Track, FSE 2026
+        </li>
         <li>
          SEIP Track, APSEC 2025
         </li>
