--- a/index.html
+++ b/index.html
@@ -306,6 +306,19 @@
            </strong>
            <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
           </span>
+          I was invited to serve as a reviewer for the Chinese Journal of Computers.
+          <p>
+          </p>
+         </p>
+        </li>
+        <li>
+         <p>
+          <span class="mydate">
+           <strong>
+            [2025.06]
+           </strong>
+           <img alt="" src="images/new2-static.gif" style="width:35px;height:35px;"/>
+          </span>
           I was invited to serve on the Program Committee of the Research Track at
           <a href="https://conf.researchr.org/home/fse-2026">
            FSE 2026
@@ -1051,6 +1064,9 @@
         </li>
         <li>
          IEEE Transactions on Reliability
+        </li>
+        <li>
+         Chinese Journal of Computers (计算机学报)
         </li>
         <li>
          Journal of Software (软件学报)
