--- a/index_template.html
+++ b/index_template.html
@@ -186,6 +186,12 @@
                             
                             <li>
                                 <p><span class="mydate"><strong>[2025.06]&nbsp;</strong></span>
+                                    I was invited to serve as a reviewer for the Chinese Journal of Computers. 
+                                <p></p>
+                            </li>
+
+                            <li>
+                                <p><span class="mydate"><strong>[2025.06]&nbsp;</strong></span>
                                     I was invited to serve on the Program Committee of the Research Track at <a href="https://conf.researchr.org/home/fse-2026">FSE 2026</a>.
                                 <p></p>
                             </li>
@@ -444,6 +450,7 @@
                             <li>Empirical Software Engineering</li>
                             <li>Automated Software Engineering Journal</li>
                             <li>IEEE Transactions on Reliability</li>
+                            <li>Chinese Journal of Computers (计算机学报)</li>
                             <li>Journal of Software (软件学报)</li>
                         </ul>
                         <h3>Conference PC Members:</h3>
