--- a/index.html
+++ b/index.html
@@ -1077,6 +1077,9 @@
        </h3>
        <ul>
         <li>
+         智能化基础软件可信构造与供应链安全专刊, CCF ChinaSoft 2025
+        </li>
+        <li>
          Research Track, FSE 2026
         </li>
         <li>
