--- a/index_template.html
+++ b/index_template.html
@@ -455,6 +455,7 @@
                         </ul>
                         <h3>Conference PC Members:</h3>
                         <ul>
+                            <li>智能化基础软件可信构造与供应链安全专刊, CCF ChinaSoft 2025</li>
                             <li>Research Track, FSE 2026</li>
                             <li>SEIP Track, APSEC 2025</li>
                             <li>Research Track, ASE 2025</li>
